Fix  #71 max width of thumb on mobile
Also remove remnants of paper-shadow

--- a/css/newsclip.css
+++ b/css/newsclip.css
@@ -107,6 +107,7 @@ label.toDate {
 
 .thumb img {
     left: 0;
+    max-width: 100%;
     box-shadow: 0 3px 9px 0 rgba(0, 0, 0, 0.40);
     transition: all 0.2s ease-in-out;
     -webkit-transition: all 0.2s ease-in-out;
@@ -132,24 +133,6 @@ hr {
     border-radius: 2px;
     overflow: visible;
     position: relative;
-}
-
-.paper-shadow {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    border-radius: inherit;
-    pointer-events: none;
-}
-
-.paper-shadow-top {
-    box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16);
-}
-
-.paper-shadow-bottom {
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 }
 
 h2 {
